WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43468
System color changes are not applied properly
https://bugs.webkit.org/show_bug.cgi?id=43468
Summary
System color changes are not applied properly
Darin Adler
Reported
2010-08-03 23:47:36 PDT
System color changes are not applied properly
Attachments
Patch
(2.09 KB, patch)
2010-08-03 23:49 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-08-03 23:49:14 PDT
Created
attachment 63420
[details]
Patch
Darin Adler
Comment 2
2010-08-04 00:33:18 PDT
Committed
r64634
: <
http://trac.webkit.org/changeset/64634
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug