2010-08-03  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        System color changes are not applied properly
        https://bugs.webkit.org/show_bug.cgi?id=43468

        * manual-tests/system-color-change.html: Added.

        * rendering/RenderTheme.cpp:
        (WebCore::RenderTheme::platformColorsDidChange): Added a call to
        Page::setNeedsReapplyStyles, so all frames of all pages will recompute
        in case they use system colors. It's rare for these colors to change,
        so OK to do a little extra style computation.


Canonical link: https://commits.webkit.org/55456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64634 268f45cc-cd09-0410-ab3c-d52691b4dbfc